css/app.css
@import url("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css");
@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css");
@import url(https://fonts.googleapis.com/css?family=Raleway:400,300);
@import url(https://fonts.googleapis.com/css?family=Lato:400,300,300italic);

body {
    background-image: url('img/quad.jpg');
    background-color: lightgray;
    font-family: "Lato", "Helvetica Neue", Helvetica, sans-serif;
}

h1, h2, h3, h4, h5, h6 {
    font-family: "Raleway", "Helvetica Neue", Helvetica, sans-serif;
    margin-bottom: 5px;
}

#edu {
    font-size: 12pt;
}

#edu p {
    margin: 0;
    padding: 0;
}

nav {
    background-color: #181C22;
    border-top: 3px solid lightpink;
    display: block;
    font-size: 16px;
    padding-left: 15px;
    position: fixed;
    width: 100%;
    z-index: 1;
}

ol {
    padding-left: 0px;
    margin-top: 5px;
    text-align: center;
}

nav li  {
    display: inline;
    font-variant: small-caps;
    padding: 0.75em;
}

a {
    color: lightpink;
}

nav a {
    color: white;
}

a:hover, a:active, a:link {
    color: lightpink;
    text-decoration: none;
}

#resume, #contact, #aboutbox {
    background: rgba(255,255,255,0.7);
    filter: alpha(opacity=70); /*for IE8 and earlier*/
    border-radius: 25px;
    padding: 3em;
    margin-top: 2%;
}

#aboutbox {
    padding-left: 15%;
    padding-right: 15%;
    text-align: center;
}

#aboutbox img {
    width: 50%;
    border-radius: 20%;
}

#resume:nth-child(n) {
    filter: none;
}

/*copy and paste below */
#wrapper {
    min-height:100%;
    position:relative;
}
/*#header {*/
    /*background: black;*/
/*}*/
#content {
    padding-top: 50px;
    padding-bottom:50px;
}
#footer {
    background:#181C22;
    width:100%;
    height:40px;
    position:absolute;
    bottom:0;
    left:0;
    border-bottom: 3px solid lightpink;
    padding: 1em;
    font-size: 12pt;
    font-variant: small-caps;
    color: white;
    text-align: center;
}

.thumbnail {
    padding: 0;
    height: 300px;
    display: inline;
}

#courses a {
    margin: 1em;
}

img.opacity {
    opacity: 0.5;
    filter: alpha(opacity=50);
    -webkit-transition: opacity 1s linear;
}

img.opacity:hover {
    opacity: 1;
    filter: alpha(opacity=100);
    -webkit-transition: opacity 1s linear;
}

ul.img-list {
    list-style-type: none;
    margin: 1em;
    padding: 0;
    /*text-align: center;*/
}

ul.img-list li {
    display: inline-block;
    height: 300px;
    margin-right: 5%;
    margin-left: 5%;
    margin-bottom: 5%;
    position: relative;
    width: 150px;
}

ul.img-list li:hover span.text-content {
    opacity: 1;
}

span.text-content {
    background: rgba(0,0,0,0.5);
    color: white;
    cursor: pointer;
    display: table;
    height: 300px;
    left: 0;
    position: absolute;
    top: 0;
    width: 300px;
    opacity: 0;
    -webkit-transition: opacity 500ms;
    -moz-transition: opacity 500ms;
    -o-transition: opacity 500ms;
    transition: opacity 500ms;
}

span.text-content span {
    display: table-cell;
    text-align: center;
    vertical-align: middle;
    font-size: x-large;
}

.modal-body img {
    padding: 1em;
}

@media screen and (min-width: 768px) {
    ol {
        text-align: right;
        padding-right: 1.5em;
    }

    #footer {
        text-align: right;
    }

    ul.img-list li {
        margin-right: 20%;
    }
}

@media screen and (min-width: 992px) {
    ul.img-list li {
        margin-right: 5%;
        /*margin-left: 1%;*/
    }
}

@media screen and (min-width: 1200px) {
    ul.img-list li {
        display: inline-block;
        height: 300px;
        margin-right: 15%;
        margin-bottom: 5%;
        position: relative;
        width: 150px;
    }
}

